--- a/code/deployment/api/Dockerfile
+++ b/code/deployment/api/Dockerfile
@@ -1,9 +1,10 @@
-FROM ghcr.io/astral-sh/uv:python3.13-alpine
+FROM python:3.10-slim-buster
+RUN pip install uv
 
 ADD . /app
 
 WORKDIR /app
-RUN uv sync --locked
+RUN uv sync
 
 EXPOSE 8000
 CMD ["uv", "run", "fastapi", "run"]
