--- a/code/deployment/api/pyproject.toml
+++ b/code/deployment/api/pyproject.toml
@@ -10,9 +10,11 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-    torch = [ { index = "pytorch-cpu" }, ]
-    torchvision = [ { index = "pytorch-cpu" }, ]
+torch = [
+    { index = "pytorch-cpu" },
+]
 
-    [[tool.uv.index]]
-    name = "pytorch-cpu"
-    url = "https://download.pytorch.org/whl/cpu"
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
